--- a/manifest.json
+++ b/manifest.json
@@ -15,8 +15,20 @@
   "background": {
     "service_worker": "service_worker.js"
   },
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "action": {
-    "default_title": "Open Focus Redirector Options"
+    "default_title": "Open Focus Redirector Options",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
   },
   "options_page": "options.html"
 }
